--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "express": "^4.17.1",
+    "inquirer": "^8.2.2",
     "mysql2": "^2.2.5"
   }
 }
